--- a/index.html
+++ b/index.html
@@ -34,8 +34,10 @@
                 </button>
 
             </main>
+            <div id="linha">
+                <hr>
+            </div>
             <footer>
-
                 <div id="left">
                     <h1>You can also sign in using an emailadress</h1>
                 </div>
