--- a/index.html
+++ b/index.html
@@ -6,59 +6,65 @@
     <title>Document</title>
 
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+
+    <link rel="stylesheet " href="normalize.css">
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="grid.css">
+    <link rel="stylesheet " href="style.css">
+
 </head>
 
 <body>
 
-    <div id="container">
-        <section id="left">
-            <header>
-                <h2>Lorem ipsum dolor</h2>
-                <h1>Become a member</h1>
-                <p>Lorem impsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-            </header>
-
-            <main>
-                <button type="submit">
-                    <img src="img/google-plus.svg" alt="Google+ logo">
-                    <h2>sign up with google+</h2>
-                </button>
-                <button type="submit">
-                    <img src="img/facebook.svg" alt="Facebook logo">
-                    <h2>sign up with facebook</h2>
-                </button>
-                <button type="submit">
-                    <img src="img/twitter.svg" alt="Twitter logo">
-                    <h2>sign up with twitter</h2>
-                </button>
-
-            </main>
-            <div id="linha">
-                <hr>
+    <div class="container">
+        <div class="grid-10 left">
+            <div class="grid-7">
+                <header>
+                    <h2>Lorem ipsum dolor</h2>
+                    <h1>Become a member</h1>
+                    <p>Lorem impsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                </header>
+                <main>
+                    <ul>
+                        <a href="">
+                            <li class="google-plus">
+                                <img class="grid-1" src="./img/google-plus.svg" alt="Google +">
+                                <h2>sign up using google +</h2>
+                            </li>
+                        </a>
+                        <a href="">
+                            <li class="facebook">
+                                <img class="grid-1" src="./img/facebook.svg" alt="Facebook +">
+                                <h2>sign up using facebook</h2>
+                            </li>
+                        </a>
+                        <a href="">
+                            <li class="twitter">
+                                <img class="grid-1" src="./img/twitter.svg" alt="Twitter">
+                                <h2>sign up using twitter</h2>
+                            </li>
+                        </a>
+                    </ul>
+                </main>
             </div>
-            <footer>
-                <div id="left">
-                    <h1>You can also sign in using an emailadress</h1>
+            <footer class="grid-10">
+                <div class="grid-7">
+                    <div class="grid-3">
+                        <h1>Sign in using an email</h1>
+                    </div>
+                    <div class="grid-3 btn">
+                        <a href="">
+                            <h2>use your email →</h2>
+                        </a>
+                    </div>
                 </div>
-                <div id="right">
-                    <button><h2>use your email</h2></button>
-                </div>
-
             </footer>
-        </section>
-        <section id="right">
-            <img src="img/building.jpg" alt="Building image">
-        </section>
-
-
-
-        <div class="imagem">
 
         </div>
+        <div class="grid-6 right">
 
+        </div>
     </div>
-
 
 </body>
 
